# axum_web_dev

./: Cargo.toml  README.md
.cargo/: config.toml
crates/libs/lib-base/: Cargo.toml
crates/libs/lib-base/src/: b64.rs  time.rs
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/: lib.rs
crates/libs/lib-core/src/_dev_utils/: mod.rs
crates/libs/lib-core/src/config/: mod.rs
crates/libs/lib-core/src/ctx/: mod.rs
crates/libs/lib-core/src/model/: base.rs  error.rs  mod.rs  project.rs  task.rs  user.rs
crates/libs/lib-core/src/pwd/: error.rs  mod.rs
crates/libs/lib-core/src/pwd/scheme/: error.rs  mod.rs  scheme_01.rs  scheme_02.rs
crates/services/web-server/: Cargo.toml
crates/services/web-server/examples/: quick_dev.rs
crates/services/web-server/src/: main.rs
crates/services/web-server/src/log/: mod.rs
crates/services/web-server/src/web/: error.rs  mod.rs  mw_res_map.rs  routes_login.rs
crates/services/web-server/src/web/rpc/: infra.rs  mod.rs  params.rs  project_rpc.rs  router.rs  state.rs  task_rpc.rs
crates/tools/gen-key/: Cargo.toml
examples/: gen_key.rs  quick_dev.rs
scripts/: init_db.sh
sql/dev_initial/: 00-recreate-db.sql  01-create-schema.sql  02-dev-seed.sql
src/: config.rs  ctx.rs  error.rs  log.rs  main.rs  model.rs
src/_dev_utils/: dev_db.rs  mod.rs
src/crypt/: error.rs  mod.rs  pwd.rs  token.rs
src/ctx/: mod.rs
src/log/: mod.rs
src/model/: base.rs  error.rs  mod.rs  task.rs  user.rs
src/model/store/: mod.rs
src/pwd/: hmac_hasher.rs
src/token/: mod.rs
src/utils/: error.rs  mod.rs
src/web/: error.rs  mod.rs  mw_auth.rs  mw_res_map.rs  routes_login.rs  routes_static.rs  routes_tickets.rs
src/web/rpc/: mod.rs  task_rpc.rs
tests/: quick_dev.rs
