[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# -- App Libs
lib-base = { path = "../../libs/lib-base" }
lib-core = { path = "../../libs/lib-core" }
# -- Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
# -- Web
axum = { version = "0.6", features = ["macros"] }
tower-http = { version = "0.4", features = ["fs"] }
tower-cookies = "0.9"
# -- Data
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "uuid" ] }
modql = {version = "0.3.1", features = ["with-sea-query"]}
sea-query = "0.30"
sea-query-binder = { version = "0.5", features = [
    "sqlx-postgres",
    "with-uuid",
    "with-time",
] }
# -- Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# -- Others
uuid = { version = "1", features = ["v4", "fast-rng"] }
time = "0.3"
strum_macros = "0.25"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.7"
serial_test = "2"
